--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 env:
   global:
     - CI_HOME=`pwd`/meta_request
-script: sh -c 'cd meta_request && rake'
-gemfile: meta_request/Gemfile
+install: 
+  - sh -c 'cd meta_request && bundle install'
+  - sh -c 'cd meta_request/test/functional/rails-4.1.4 && bundle install'
+script:  sh -c 'cd meta_request && make'
 rvm:
   - 1.9.3
   - 2.0.0
+  - 2.1.2
