--- a/meta_request/Rakefile
+++ b/meta_request/Rakefile
@@ -1,11 +1,10 @@
-require "bundler/gem_tasks"
+require 'bundler/gem_tasks'
 
 require 'rake/testtask'
 
 Rake::TestTask.new do |t|
-  t.libs << "test"
-  t.test_files = FileList['test/**/*_test.rb']
-  t.verbose = true
+  t.name = 'test:unit'
+  t.libs << 'test/unit'
+  t.test_files = FileList['test/unit/**/*_test.rb']
 end
 
-task :default => :test
